Bug 1114825 - Don't try to deref an empty std::vector in gmp-clearkey. r=edwin